--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,10 @@ jobs:
       run: |
         composer install --prefer-dist
 
+    - name : Run PHPStan
+      run: |
+        composer run-script phpstan
+        
     - name: Unit tests
       run: |
         composer run-script test
