--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
    
     - name: Get composer cache directory
       id: composercache
-      run: echo "{dir}={$(composer config cache-files-dir)}" >> $GITHUB_OUTPUT
+      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
       
     - name: Cache dependencies
       uses: actions/cache@v4
